Fixed Logo image path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!--Navigation-->
   <nav class="nav">
-    <img src="/images/logo.svg" alt="Logo">
+    <img src="images/logo.svg" alt="Logo">
   </nav>
 
   <!--GRID FOR IMAGE AND TEXT-->
